# bevy-fps-shooter

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: cs1.6_ak-47.glb  de_dust2.glb
assets/sprites/: muzzle_flash2.spr
src/: main.rs
src/modules/: animations.rs  audio.rs  controls.rs  events.rs  game.rs  gunplay.rs  menu.rs  mod.rs  movement.rs  player.rs  structs.rs
src/rendering/: entities.rs  lighting.rs  mod.rs
