[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["wayland"] }
bevy_rapier3d = { version = "0.25.0", features = [ "simd-stable", "debug-render-3d" ] }

[profile.release]
codegen-units = 1
